I implemented the images and the buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto Social</title>
-</head>
-<body>
-  <h1>Olá, mundo</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Projeto Redes Sociais</title>
+        <link rel="stylesheet" href="./styles/style.css" />
+    </head>
+    <body>
+        <main>
+            <section id="telefone">
+                <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                    Seu navegador não é compatível com isso.
+                </iframe>
+            </section>
+            <section id="redes-sociais">
+                <a href="#">
+                    <img src="images/logo-home.jpg" alt="Home" />
+                </a><br>
+                <a href="#">
+                    <img src="images/logo-youtube.jpg" alt="Youtube" />
+                </a><br>
+                <a href="#">
+                    <img src="images/logo-facebook.jpg" alt="Facebook" />
+                </a><br>
+                <a href="#">
+                    <img src="images/logo-instagram.jpg" alt="Instagram" />
+                </a><br>
+                <a href="#">
+                    <img src="images/logo-twitter.jpg" alt="Twitter" />
+                </a><br>
+                <a href="#">
+                    <img src="images/logo-github.jpg" alt="GitHub" />
+                </a><br>
+            </section>
+        </main>
+    </body>
 </html>
